--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "video_downloader_backend",
+  "name": "video-downloader-api",
   "version": "1.0.0",
+  "description": "Video downloader API using yt-dlp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  }
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": ["video", "downloader", "yt-dlp", "api"],
+  "author": "Your Name",
+  "license": "MIT"
 }
